--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hammerjs": "^1.0.1",
+    "react-inlinesvg": "^0.7.4",
+    "react-render-html": "^0.6.0",
     "react-scripts": "1.1.0"
   },
   "scripts": {
@@ -12,6 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-},
-    "proxy": "http://localhost:3001"
+  },
+  "proxy": "http://localhost:3001"
 }
