--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^4.12.2",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.2.0",
+    "react-faux-dom": "^4.1.0",
     "react-hammerjs": "^1.0.1",
     "react-inlinesvg": "^0.7.4",
     "react-render-html": "^0.6.0",
