--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-render-html": "^0.6.0",
     "react-scripts": "1.1.0",
     "react-xml-parser": "^1.0.3",
+    "redux": "^3.7.2",
     "simple-object-query": "^1.6.1",
     "xml2js": "^0.4.19",
     "xml2js-parser": "^1.1.1"
