--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "electron": "^1.8.2",
     "json-query": "^2.2.2",
+    "material-ui": "^1.0.0-beta.35",
     "prop-types": "^15.6.0",
-    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hammerjs": "^1.0.1",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.1.0",
+    "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "simple-object-query": "^1.6.1",
     "svg-path-bounds": "^1.0.1",
-    "whatwg-fetch": "^2.0.3",
-    "xml2js": "^0.4.19",
-    "electron": "^1.8.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +23,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://127.0.0.1:3001"
 }
