--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "electron": "^1.8.2",
+    "graphology": "^0.11.2",
+    "graphology-shortest-path": "^1.0.0",
     "json-query": "^2.2.2",
     "material-ui": "^1.0.0-beta.35",
     "prop-types": "^15.6.0",
