--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "electron": "^1.8.2",
+    "fuzzy-search": "^2.0.1",
     "graphology": "^0.11.2",
     "graphology-shortest-path": "^1.0.0",
     "json-query": "^2.2.2",
     "material-ui": "^1.0.0-beta.35",
+    "material-ui-icons": "^1.0.0-beta.36",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -17,6 +19,7 @@
     "react-sizeme": "^2.3.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sort-object": "^3.0.2",
     "svg-path-bounds": "^1.0.1",
     "transformation-matrix": "^1.8.0",
     "whatwg-fetch": "^2.0.3"
