--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,18 @@
     "graphology": "^0.11.2",
     "graphology-shortest-path": "^1.0.0",
     "json-query": "^2.2.2",
-    "material-ui": "^1.0.0-beta.35",
+    "material-ui": "^1.0.0-beta.37",
     "material-ui-icons": "^1.0.0-beta.36",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hammerjs": "^1.0.1",
+    "react-material-ui-keyboard": "^6.2.1",
     "react-redux": "^5.0.6",
+    "react-screen-keyboard": "^1.4.1",
     "react-scripts": "1.1.1",
     "react-sizeme": "^2.3.6",
+    "react-touch-screen-keyboard": "^0.3.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "sort-object": "^3.0.2",
